# vehicle-trajectory-prediction-av2

./: .gitignore  AGENTS.md  GOAL_RUNBOOK.md  Makefile  PROJECT_STATUS.md  README.md  WINDOWS_ENV_SETUP.md  codex_vehicle_trajectory_project_plan.md  github_portfolio_workflow.md  pyproject.toml  requirements.txt  windows_gpu_training_only_workflow.md
configs/: analysis.yaml  diffusion_direct.yaml  diffusion_pca.yaml  full_diffusion_tuning_matrix.yaml  full_long_lstm.yaml  full_long_transformer.yaml  full_pilot_diffusion_direct_1epoch.yaml  full_pilot_diffusion_direct_5epoch.yaml  full_pilot_diffusion_pca_1epoch.yaml  full_pilot_diffusion_pca_5epoch.yaml  full_pilot_lstm_1epoch.yaml  full_pilot_lstm_5epoch.yaml  full_pilot_transformer_1epoch.yaml  full_pilot_transformer_5epoch.yaml  full_tune_diffusion_direct_a.yaml  full_tune_diffusion_direct_b.yaml  full_tune_diffusion_direct_c.yaml  full_tune_diffusion_direct_d.yaml  full_tune_diffusion_direct_e.yaml  full_tune_diffusion_direct_f.yaml  full_tune_diffusion_pca_a.yaml  full_tune_diffusion_pca_b.yaml  full_tune_diffusion_pca_c.yaml  full_tune_diffusion_pca_d.yaml  full_tune_diffusion_pca_e.yaml  full_tune_diffusion_pca_f.yaml  linear.yaml  lstm.yaml  phase14_diffusion_direct_smoke.yaml  phase14_diffusion_pca_smoke.yaml  phase14_lstm_smoke.yaml  phase14_transformer_smoke.yaml  preprocess_small.yaml  preprocess_smoke.yaml  transformer.yaml
docs/: README.md  WINDOWS_ENV_SETUP.md  codex_vehicle_trajectory_project_plan.md  full_av2_training_staged_workflow.md  github_portfolio_workflow.md  gpt_project_qa_reference.md  (+1 more)
(+184 files in other folders)
