[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-trajectory-project"
version = "0.1.0"
description = "Vehicle and pedestrian trajectory forecasting experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "pyyaml",
  "joblib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
